--- a/esercizio1.csproj
+++ b/esercizio1.csproj
@@ -5,6 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="4.1.1"/>
+  <Compile Remove="Model/Services/Application/Esercizio1Service.cs"/>
+    
+    
+    <PackageReference Include="Microsoft.Data.SQLite" Version="6.0.2" />
   </ItemGroup>
 </Project>
